# kepler-cli

./: .gitignore  README.md  main.py  pyproject.toml
cli/: __init__.py  app_info.py  commands.py  entrypoint.py  welcome.py
config/: config.py  config_impl.py  prompt_config.py
prompts/: generate_summary.example.md
service/: ai_service.py  word_service.py
utils/: config.py  date_util.py  git_util.py  write_markdown.py
